--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+    <audio id="audio" autoplay>
+      <source src="music/valentines-piano-296766.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
@@ -134,4 +138,10 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   <script type="text/babel" src="script/main.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      let audio = document.getElementById("audio");
+      audio.play().catch(error => console.log("Autoplay prevented:", error));
+    });
+  </script>
 </html>
