--- a/index.html
+++ b/index.html
@@ -139,9 +139,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   <script type="text/babel" src="script/main.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    function playAudio() {
       let audio = document.getElementById("audio");
-      audio.play().catch(error => console.log("Autoplay prevented:", error));
-    });
+      audio.play();
+    }
+
+    document.addEventListener("click", playAudio, { once: true });
+    document.addEventListener("keydown", playAudio, { once: true });
   </script>
 </html>
