Making autoscroll enabled

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Pretty Girl</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">Happy Valentine's Day</h3>
+          <div class="scroll-container">
+          <h5 id="wishText">I'm not sure if you think Valentine's Day is important or not but, irrespective of that, I wanted to show you how important you are to me. Unfortunately I can't be with you, invite you out for dinner or even cook you dinner. Those things will come, what I can do now is tell you how I feel about you. In songs, they sing about how they can love deeper than the oceans or higher than the stars above, I know I'm from a small town and I haven't seen it all but the ocean comes and goes with the tide and the stars, they sometimes fall. That would not do justice to the way I feel for you. I cross my heart and promise to give all I've got to make your dreams come true. You'll always be the miracle that makes my life complete, and I'll always be the man in love with you. Happy Valentine's Day, I love you more than you will ever know and I miss you greatly. Jonny <3</h5>
+          </div>
         </div>
       </div>
       <div class="seven">
